# Hero-API-with-Team

./: .gitignore  Dockerfile  Instalation command.txt  README.md  compose.yaml  pyproject.toml
app/: db.py  main.py
hero_api/model/: database.py  hero.py  team.py
hero_api/routes/: hero.py  team.py
hero_api/schemas/: hero.py  schemas.py  team.py
tests/: test_main.py
