[tool.poetry]
name = "hero-api"
version = "0.1.0"
description = ""
authors = ["ahmerarman <ahmer.arman40@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.28.1"}
psycopg = "^3.1.18"
psycopg2 = "^2.9.9"
aiokafka = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
